--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -64,9 +64,10 @@
   }
   .link, .link-welcome {
     font-weight: 100;
-    font-size: 3vw;
+    font-size: 3.5vw;
     padding: 0;
     margin: 0 10px;
+    font-weight: 400;
   }
   .link-welcome {
     padding-right: 0px;
