--- a/client/src/screens/ItemCreate/ItemCreate.css
+++ b/client/src/screens/ItemCreate/ItemCreate.css
@@ -1,18 +1,22 @@
 .item-create {
   display: grid;
-  width: 70%;
-  align-items: stretch;
-  justify-content: center;
-  max-height: 62vh;
-  margin: 1% 20% 4% 15%;
+  /* max-height: 62vh; */
+  /* width: 70%; */
+  /* align-items: stretch; */
+  /* justify-content: center; */
+  /* margin: 1% 20% 4% 15%; */
   font-family: "Catamaran", sans-serif;
   font-size: 15px;
   letter-spacing: 0.05rem;
+  box-sizing: border-box;
+  /* place-items: center; */
+  place-content: center;
+  align-content: space-around;
 }
 .form-create {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  justify-content: center;
+  /* justify-content: center; */
   column-gap: 50px;
 }
 .item-container-create {
@@ -21,7 +25,8 @@
 .container-create {
   min-height: 5vh;
 }
-.div-create {
+.div-create,
+.div-notes-create {
   font-weight: 600;
 }
 .input-create {
@@ -34,31 +39,37 @@
   color: grey;
 }
 .notes-container-create {
-  align-items: stretch;
   min-width: 290px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: start;
   height: 97%;
+  /* border: 1px solid blue; */
+}
+.div-notes-create {
+  align-items: flex-start;
+  display: flex;
+  justify-self: start;
 }
 .textarea-notes-create {
   word-wrap: break-word;
   overflow-wrap: break-word;
   height: 100%;
-  justify-self: stretch;
-  width: 75%;
+  /* justify-self: stretch; */
+  width: 80%;
   border: 1px lightgrey solid;
 }
 .button-container-create {
   grid-column: span 2 / auto;
   margin: auto;
+  /* border: 1px solid red; */
 }
 .save-button {
-  margin: 8px;
+  /* margin: 8px; */
   color: white;
   background-color: black;
   border-radius: 15px;
-  text-align: center;
+  /* text-align: center; */
   font-size: 14px;
   padding: 0.2rem 64px;
   font-family: "Catamaran", sans-serif;
@@ -72,43 +83,36 @@
 }
 @media (max-width: 500px) {
   .item-create {
-    flex-direction: column;
     display: flex;
-    min-height: 70vh;
+    flex-direction: column;
+    /* min-height: 70vh; */
+    /* margin-top: 10px; */
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: space-around;
   }
   .form-create{
     display:flex;
     flex-direction: column;
-    margin-top: 30px;
+    /* margin-top: 30px; */
   }
   .item-container-create{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-self: center;
   }
   .notes-container-create{
+    /* border: 1px solid green; */
     min-width: auto;
     display: flex;
     flex-direction: column;
+  }
+  .div-notes-create {
     align-items: center;
   }
   .textarea-notes-create{
-    width: 80%;
+    width: 100%;
     height: 150px;
-  }
-  .notes-create{
-    font-weight: 600;
-    display: flex;
-    align-self: flex-start;
-    margin-left: 27px;
-  }
-  .button-container-create {
-    padding: 0.2rem 45px;
-    margin-top: 3%;
-    margin-left: 11%;
-  }
-  .save-button {
-    padding: 0.2rem 45px;
-    margin: 0;
   }
 }
