--- a/client/src/screens/ItemEdit/ItemEdit.css
+++ b/client/src/screens/ItemEdit/ItemEdit.css
@@ -1,6 +1,8 @@
 .item-edit {
   display: grid;
-  column-gap: 150px;
+  width: 70%;
+  column-gap: 50px;
+  margin: 4% 20% 12% 15%;
   grid-template-columns: repeat(2, 1fr);
   justify-content: center;
   align-items: stretch;
